# openai-rust-sdk

./: Cargo.toml  Makefile
src/: lib.rs
src/api/: chat_completion.rs  create_image.rs  message.rs  mod.rs
