[package]
name = "openai-llm-sdk"
version = "0.1.0"
edition = "2021"

# openai llm sdk

[dependencies]
# 错误处理
anyhow = "1.0.75"
# 结构体构建库
derive_builder = "0.12.0"
# 网络请求
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json", "gzip"] }
# 序列化库
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
[dev-dependencies]
# 异步运行时
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
